@@ -15,6 +15,7 @@ version <next>:
 - new ffmpeg options -filter_script and -filter_complex_script, which allow a
   filtergraph description to be read from a file
 - OpenCL support
+- audio phaser filter
 
 
 version 1.2:
